# gbridge

./: .gitignore  Makefile.am  README  configure.ac  controller.c  controller.h  debug.c  debug.h  gbridge.h  greybus.c  greybus.h  main.c  netlink.c  netlink.h  svc.c  tcpip.c  uart.c  uart.h
controllers/: bluetooth.c  gb_netlink.c  gbsim.c  tcpip.c  uart.c
greybus/: control.c  greybus.c  libgreybus.h  loopback.c  manifest.c  manifest.h
protocols/: control.c  loopback.c  manifest.c  protocols.h  svc.c
